k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observatory
  labels:
    app.kubernetes.io/name: observatory
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: observatory
